--- a/memetab.css
+++ b/memetab.css
@@ -1,3 +1,29 @@
+html, body{
+	width: 100%;
+	height: 100%;
+}
+
+.bodycontainer{
+	padding: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 90%;
+	width: 100%;
+}
+
+#meme_img{
+	border: 5px solid black;
+	width: 500px;
+	height: 400px;
+}
+
+.form{
+	margin-top: 50px;
+	width: 55%;
+}
+
 input[type="text"]{
     font-family: Georgia, "Times New Roman", Times, serif;
 	background: rgba(255,255,255,.1);
@@ -15,5 +41,4 @@ input[type="text"]{
 	color:#8a97a0;
 	-webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
 	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-	margin-bottom: 30px;
 }
