--- a/memetab.css
+++ b/memetab.css
@@ -28,11 +28,11 @@ input[type="text"]{
     font-family: Georgia, "Times New Roman", Times, serif;
 	background: rgba(255,255,255,.1);
 	border: none;
-	border-radius: 4px;
-	font-size: 15px;
+	border-radius: 25px;
+	font-size: 18px;
 	margin: 0;
 	outline: 0;
-	padding: 10px;
+	padding: 12px 20px;
 	width: 100%;
 	box-sizing: border-box; 
 	-webkit-box-sizing: border-box;
