--- a/memetab.css
+++ b/memetab.css
@@ -47,3 +47,18 @@ input[type="text"]{
 	background-size: 30px;
 	padding-left: 65px;
 }
+
+
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: white;
+        color: black;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: black;
+        color: white;
+    }
+}
